# fwupd

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .codecov.yml  .editorconfig  .git-blame-ignore-revs  .gitconfig  .gitignore  .gitmodules  .lgtm.yml  .markdownlint.json  .pre-commit-config.yaml  .travis.yml  0001-flashrom-Always-load-the-plugin-when-using-coreboot.patch  0001-nvt-ts-add-Novatek-touchscreen-plugin.patch  BUILD_ANDROID_NDK.md  CODE_OF_CONDUCT.adoc  CODE_OF_CONDUCT.md  COMMITMENT  CONTRIBUTING.adoc  CONTRIBUTING.md  Cargo.toml  MAINTAINERS  Makefile.am  NEWS  README.adoc  README.md  RELEASE  RELEASE.adoc  RELEASE.md  SECURITY.adoc  SECURITY.md  adb-push-sync.sh  adb_fwupd_env.sh  autogen.sh  bcr  build_and_repro.sh  configure.ac  git.mk  (+9 more)
contrib/: PKGBUILD  README.adoc  README.md  add-capsule-header.py  afl-fuzz.py  build-certs.py  build-openbmc.sh  build-venv.sh  build-windows.sh  cfu-inf-to-quirk.py  check-ifd-firmware.py  check-meson-install-tags.py  codespell.cfg  convert-quirks.py  create-plugin.py  dump-mtd-ifd.py  fix_translations.py  fwupd-systemd-fatal-criticals.conf  fwupd.spec.in  fwupd.wxs.in  generate-ds20.py  generate-emulation.py  generate-gresource-xml.py  generate-man.py  generate-plugins-header.py  generate-release.py  generate-release.xml  generate-version-script.py  get-version.py  launch-venv.sh  lsan-suppressions.txt  meson-reformat.sh  meson.build  migrate.py  mingw64.cross  minimize-emulation.py  minimize-test-profile.py  muon_fmt.ini  nix.sh  nvme-parse.py  (+13 more)
data/: 90-fwupd-devices.rules  Makefile.am  agent.conf  bios-settings.quirk  cfi.quirk  client.conf  context.quirk  daemon.conf  ds20.quirk  firmware.quirk  fwsignd.conf  fwsignd.service.in  fwupd-i2c.conf  fwupd-netdevsim.conf  fwupd-offline-update.service.in  fwupd.conf  fwupd.service.in  fwupd.shutdown.in  fwupdagent.service  fwupdagent.timer  meson.build  metadata.xml  org.freedesktop.fwupd.conf  org.freedesktop.fwupd.metainfo.xml  org.freedesktop.fwupd.plist  org.freedesktop.fwupd.service.in  org.freedesktop.fwupd.xml  power.quirk  vendors.quirk  via-firmware.xml
docs/: Makefile.am  best-known-configuration.adoc  best-known-configuration.md  bios-settings.adoc  bios-settings.md  building.adoc  building.md  dell-provider.md  device-emulation.adoc  device-emulation.md  device-version-blocklist.adoc  device-version-blocklist.md  dfu-metadata-store.md  ds20.adoc  ds20.md  env.adoc  env.md  fwupd-docs.xml  fwupd-remotes.d.adoc  fwupd-remotes.d.md  fwupd.conf.adoc  fwupd.conf.md  fwupd.toml.in  fwupdplugin.toml.in  generate-hsi-spec.py  generate-oval.py  hsi.adoc.in  hsi.html  hsi.md  hsi.md.in  hsi.xml  hwids.adoc  hwids.md  index.html  meson.build  nda.adoc  nda.md  only-trusted.adoc  only-trusted.md  supermicro-license.adoc  (+13 more)
generate-build/: README.adoc  README.md  fix_translations.py  generate-dbus-interface.py  generate-index.py  generate-man.py  generate-metainfo.py  generate-plugins-header.py  generate-quirk-builtin.py  generate-version-script.py  meson-cargo.sh  meson.build  unittest_inspector.py
libdfu/: Makefile.am  dfu-cipher-devo.c  dfu-cipher-xtea.c  dfu-cipher-xtea.h  dfu-common.c  dfu-common.h  dfu-context.c  dfu-context.h  dfu-device-private.h  dfu-device.c  dfu-device.h  dfu-element-private.h  dfu-element.c  dfu-element.h  dfu-error.c  dfu-error.h  dfu-firmware-private.h  dfu-firmware.c  dfu-firmware.h  dfu-format-dfu.c  dfu-format-dfuse.c  dfu-format-elf.c  dfu-format-elf.h  dfu-format-ihex.c  dfu-format-metadata.c  dfu-format-metadata.h  dfu-format-raw.c  dfu-format-raw.h  dfu-image-private.h  dfu-image.c  dfu-image.h  dfu-patch.c  dfu-progress-bar.c  dfu-progress-bar.h  dfu-sector.c  dfu-sector.h  dfu-self-test.c  dfu-target-private.h  dfu-target.c  dfu-target.h  (+6 more)
libebitdo/: Makefile.am  ebitdo-common.c  ebitdo-common.h  ebitdo-device.c  ebitdo-device.h  ebitdo-parse.c  ebitdo-tool.c  ebitdo.h  ebitdo.pc.in
libfwupd/: Makefile.am  README.adoc  README.md  fwupd-binder-variant-hack.h  fwupd-bios-attr-private.h  fwupd-bios-attr.c  fwupd-bios-attr.h  fwupd-bios-setting-private.h  fwupd-bios-setting-test.c  fwupd-bios-setting.c  fwupd-bios-setting.h  fwupd-bios-setting.rs  fwupd-build-glib-2-58.h  fwupd-build-glib-2-60.h  fwupd-build-glib-2-62.h  fwupd-build-glib-2-64.h  fwupd-build-glib-2-66.h  fwupd-build-glib-2-68.h  fwupd-build-glib-2-70.h  fwupd-build-glib-2-72.h  fwupd-build-glib-2-76.h  fwupd-build-glib-2-80.h  fwupd-build.h  fwupd-client-private.h  fwupd-client-sync-private.h  fwupd-client-sync.c  fwupd-client-sync.h  fwupd-client-test.c  fwupd-client.c  fwupd-client.h  fwupd-client.rs  fwupd-codec-private.h  fwupd-codec.c  fwupd-codec.h  fwupd-codec.rs  fwupd-common-private.h  fwupd-common-test.c  fwupd-common.c  fwupd-common.h  fwupd-context-test.c  (+91 more)
libfwupdplugin/: README.adoc  README.md  fu-acpi-table.c  fu-acpi-table.h  fu-acpi-table.rs  fu-acpi-table.struct  fu-archive-firmware.c  fu-archive-firmware.h  fu-archive-test.c  fu-archive.c  fu-archive.h  fu-archive.rs  fu-backend-private.h  fu-backend-test.c  fu-backend.c  fu-backend.h  fu-backend.rs  fu-bios-attrs-private.h  fu-bios-attrs.c  fu-bios-attrs.h  fu-bios-setting.c  fu-bios-setting.h  fu-bios-settings-private.h  fu-bios-settings-test.c  fu-bios-settings.c  fu-bios-settings.h  fu-block-device.c  fu-block-device.h  fu-block-partition.c  fu-block-partition.h  fu-bluez-device.c  fu-bluez-device.h  fu-byte-array-test.c  fu-byte-array.c  fu-byte-array.h  fu-bytes-test.c  fu-bytes.c  fu-bytes.h  fu-cab-firmware-private.h  fu-cab-firmware-test.c  (+555 more)
man/: Makefile.am  fwupdmgr.sgml
plugins/: Makefile.am  README.adoc  README.md  meson.build  migrate.py
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  af.po  ar.po  ast.po  bg.po  ca.po  cs.po  da.po  de.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  fwupd.pot  gl.po  he.po  hi.po  hi_IN.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kk.po  ko.po  ky.po  lt.po  lv.po  make-images  make-images.sh  (+22 more)
policy/: Makefile.am  meson.build  org.freedesktop.fwupd-unsafe.rules  org.freedesktop.fwupd.policy.in  (+1 more)
(+6752 files in other folders)
